# carmen

./: README.md  readme.txt  readme.txt~
carmen/: manifest.xml
carmen/launch/: display.launch  gazebo.launch
carmen/meshes/: base_link.STL  link1.STL  link2.STL  link4.STL  link5.STL  link6.STL
carmen/robots/: carmen.URDF
carmen_ik/: CMakeLists.txt  package.xml  readme
carmen_ik/carmen_ik_arduino/: carmen_ik_arduino.ino
carmen_ik/carmen_ik_arduino_bkp/: carmen_ik_arduino.ino
carmen_ik/doc/: Robot_Arm_Designer.xls  carmen_workspace.xlsx
carmen_ik/msg/: ReadMotor.msg  WriteMotor.msg
carmen_ik/src/: carmen_teleoperator.cpp  move_v1.cpp
carmen_ino/: carmen.ino
carmen_move/: CMakeLists.txt  package.xml
carmen_moveit_config/: .setup_assistant  CMakeLists.txt  CMakeLists.txt~  package.xml
carmen_moveit_config/config/: carmen.srdf  fake_controllers.yaml  kinematics.yaml
carmen_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo.launch~  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  warehouse.launch
carmen_moveit_config/src/: carmen_node.cpp  move_group_interface_coordinate.cpp  move_group_interface_coordinate2.cpp  move_group_interface_coordinate3.cpp  move_group_interface_random.cpp  readme~
carmen_moveit_config_v2/: .setup_assistant  CMakeLists.txt
carmen_msgs/: CMakeLists.txt  package.xml
carmen_step/: carmen_step.ino
cnt/: CMakeLists.txt  README.md  package.xml
wlehman/: brazen_joints.cpp  brazenbot.h  brazenbot.msg
(+29 files in other folders)
